Update package workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,10 +83,10 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload Artifacts 
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Linux Artifacts
+        name: Linux Artifact
         path: .release/oec-linux/*.zip
     - name: Upload
       uses: actions/upload-release-asset@v1
@@ -165,20 +165,33 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Compressing RPM Package
-      run: zip -qq -j -r .release/oec-rpm/opsgenie-${INTEGRATION_NAME}-${INTEGRATION_VERSION}-rpm-x86_64.zip ~/rpmbuild/RPMS/x86_64/*.rpm
+    - name: Move RPM Package
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload Artifacts 
+      run: mv ~/rpmbuild/RPMS/x86_64/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-1.x86_64.rpm .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
+    - name: Move RHEL6 Package
+      env:
+        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      run: mv ~/rpmbuild/RPMS/x86_64/opsgenie-${{ env.INTEGRATION_NAME }}-rhel6-${{ env.INTEGRATION_VERSION }}-1.x86_64.rpm .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
+    - name: Upload RPM Artifact
       uses: actions/upload-artifact@v2
-      with:
-        name: RPM Artifacts
-        path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-rpm-x86_64.zip
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload 
+      with:
+        name: RPM Artifact
+        path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
+    - name: Upload RHEL6 Artifact
+      uses: actions/upload-artifact@v2
+      env:
+        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      with:
+        name: RHEL6 Artifact
+        path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
+    - name: Upload RPM
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -186,9 +199,20 @@ jobs:
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
-        asset_path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-rpm-x86_64.zip
-        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-rpm-x86_64.zip
-        asset_content_type: application/zip
+        asset_path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
+        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
+        asset_content_type: application/octet-stream
+    - name: Upload RHEL6
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      with:
+        upload_url: ${{ needs.setup.outputs.upload_url }}
+        asset_path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
+        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
+        asset_content_type: application/octet-stream
   deb:
     name: DEB
     runs-on: ubuntu-latest
@@ -239,7 +263,7 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Create RPM Package 
+    - name: Create Deb Package 
       working-directory: .release/
       run: |
         sed -i "s|<path_of_script>|/home/opsgenie/oec/scripts/actionExecutor.py|" oec-deb/home/opsgenie/oec/conf/config.json
@@ -254,16 +278,18 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Compressing RPM Package
-      run: zip -qq -j -r .release/oec-deb/opsgenie-${INTEGRATION_NAME}-${INTEGRATION_VERSION}-deb-x86_64.zip .release/deb-package/*.deb
+    - name: Ls Deb Package
+      run: ls .release/deb-package/
+    - name: Move Deb Package
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload Artifacts 
+      run: mv .release/deb-package/*.deb .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Debian Artifacts
-        path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-deb-x86_64.zip
+        name: Debian Artifact
+        path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
@@ -275,9 +301,9 @@ jobs:
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
-        asset_path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-deb-x86_64.zip
-        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-deb-x86_64.zip
-        asset_content_type: application/zip
+        asset_path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
+        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
+        asset_content_type: application/octet-stream
   win32:
     name: Windows 32
     runs-on: ubuntu-latest
@@ -329,10 +355,10 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload Artifacts 
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Win32 Artifacts
+        name: Win32 Artifact
         path: .release/oec-win32/*.zip
     - name: Upload
       uses: actions/upload-release-asset@v1
@@ -396,10 +422,10 @@ jobs:
       env:
         INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
         INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
-    - name: Upload Artifacts 
+    - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Win64 Artifacts
+        name: Win64 Artifact
         path: .release/oec-win64/*.zip
     - name: Upload
       uses: actions/upload-release-asset@v1
