--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,10 @@ jobs:
     name: Linux
     runs-on: ubuntu-latest
     needs: [setup]
+    env:
+      INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+      INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      INTEGRATION_FOLDER: opsgenie-${{ needs.setup.outputs.integration_name }}-${{ needs.setup.outputs.integration_version }}-linux-amd64
     if: github.ref == 'refs/heads/master'
     steps:
     - name: Set up Go 1.x
@@ -49,7 +53,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
     - name: Create Output Directory
-      run: mkdir -p .release/oec-linux
+      run: mkdir -p .release/oec-linux/${{ env.INTEGRATION_FOLDER }}
     - name: Download Asset
       uses: i3h/download-release-asset@v1.2.0
       with:
@@ -58,35 +62,29 @@ jobs:
         tag: ${{ github.event.inputs.oec-version }}
         file: oec-linux-amd64-${{ github.event.inputs.oec-version }}.zip
     - name: Extracting Linux Package
-      run: unzip -qq oec-linux-amd64-${{ github.event.inputs.oec-version }}.zip -d .release/oec-linux
+      run: unzip -qq oec-linux-amd64-${{ github.event.inputs.oec-version }}.zip -d .release/oec-linux/${{ env.INTEGRATION_FOLDER }}
     - name: Copy Integration Files
-      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-linux
+      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-linux/${{ env.INTEGRATION_FOLDER }}
     - name: Remove http script (todo remove when http version is released)
-      run: rm -f .release/oec-linux/scripts/http.py
+      run: rm -f .release/oec-linux/${{ env.INTEGRATION_FOLDER }}/scripts/http.py
     - name: Check incomming part exists
       id: check_files
       uses: andstor/file-existence-action@v1
       with:
-        files: ".release/oec-linux/opsgenie-${{ env.INTEGRATION_NAME }}"
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+        files: ".release/oec-linux/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}"
     - name: "Release Incomming Part"
       working-directory: .release
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        INTEGRATION_PATH=oec-linux/opsgenie-${INTEGRATION_NAME}
+        INTEGRATION_PATH=oec-linux/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}
         echo ${INTEGRATION_PATH}
         go get -u github.com/alexcesaro/log && \
         cd ${INTEGRATION_PATH} && \
         GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
     - name: Compressing Linux Package
-      run: zip -qq -j -r .release/oec-linux/opsgenie-${INTEGRATION_NAME}-${INTEGRATION_VERSION}-linux-amd64.zip .release/oec-linux/
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      run: |
+          cd .release/oec-linux/
+          zip -r opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-linux-amd64.zip ./${{ env.INTEGRATION_FOLDER }}
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -96,8 +94,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
         asset_path: .release/oec-linux/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-linux-amd64.zip
@@ -107,6 +103,9 @@ jobs:
     name: RPM
     runs-on: ubuntu-latest
     needs: [setup]
+    env:
+      INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+      INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     if: github.ref == 'refs/heads/master'
     steps:
     - name: Set up Go 1.x
@@ -136,9 +135,6 @@ jobs:
       uses: andstor/file-existence-action@v1
       with:
         files: ".release/oec-rpm/oec-scripts/opsgenie-${{ env.INTEGRATION_NAME }}"
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: "Release Incomming Part"
       working-directory: .release
       if: steps.check_files.outputs.files_exists == 'true'
@@ -148,9 +144,6 @@ jobs:
         go get -u github.com/alexcesaro/log && \
         cd ${INTEGRATION_PATH} && \
         GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Create RPM Package 
       working-directory: .release/oec-rpm
       run: |
@@ -166,32 +159,17 @@ jobs:
 
         rpmbuild --target=x86_64 -ba SPECS/oec.spec
         rpmbuild --target=x86_64 -ba SPECS/oec-rhel6.spec
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Move RPM Package
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       run: mv ~/rpmbuild/RPMS/x86_64/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-1.x86_64.rpm .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
     - name: Move RHEL6 Package
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       run: mv ~/rpmbuild/RPMS/x86_64/opsgenie-${{ env.INTEGRATION_NAME }}-rhel6-${{ env.INTEGRATION_VERSION }}-1.x86_64.rpm .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
     - name: Upload RPM Artifact
       uses: actions/upload-artifact@v2
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         name: RPM Artifact
         path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
     - name: Upload RHEL6 Artifact
       uses: actions/upload-artifact@v2
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         name: RHEL6 Artifact
         path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
@@ -199,8 +177,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
         asset_path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.x86_64.rpm
@@ -210,8 +186,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
         asset_path: .release/oec-rpm/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}.rhel6.x86_64.rpm
@@ -221,6 +195,9 @@ jobs:
     name: DEB
     runs-on: ubuntu-latest
     needs: [setup]
+    env:
+      INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+      INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     if: github.ref == 'refs/heads/master'
     steps:
     - name: Set up Go 1.x
@@ -252,21 +229,15 @@ jobs:
       uses: andstor/file-existence-action@v1
       with:
         files: ".release/oec-deb/home/opsgenie/oec/opsgenie-${{ env.INTEGRATION_NAME }}"
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: "Release Incomming Part"
       working-directory: .release
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        INTEGRATION_PATH=oec-deb/home/opsgenie/oec/opsgenie-${INTEGRATION_NAME}
+        INTEGRATION_PATH=oec-deb/home/opsgenie/oec/opsgenie-${{ env.INTEGRATION_NAME }}
         echo ${INTEGRATION_PATH}
         go get -u github.com/alexcesaro/log && \
         cd ${INTEGRATION_PATH} && \
         GOOS=linux GOARCH=amd64 go build -o send2opsgenie send2opsgenie.go
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Create Deb Package 
       working-directory: .release/
       run: |
@@ -279,28 +250,17 @@ jobs:
 
         mkdir deb-package
         dpkg-deb -b  oec-deb deb-package
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Move Deb Package
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       run: mv .release/deb-package/*.deb .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: Debian Artifact
         path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Upload 
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
         asset_path: .release/oec-deb/opsgenie-${{ env.INTEGRATION_NAME }}_${{ env.INTEGRATION_VERSION }}_amd64.deb
@@ -310,6 +270,10 @@ jobs:
     name: Windows 32
     runs-on: ubuntu-latest
     needs: [setup]
+    env:
+      INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+      INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      INTEGRATION_FOLDER: opsgenie-${{ needs.setup.outputs.integration_name }}-${{ needs.setup.outputs.integration_version }}-win-386
     if: github.ref == 'refs/heads/master'    
     steps:
     - name: Set up Go 1.x
@@ -320,7 +284,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
     - name: Create Output Directory
-      run: mkdir -p .release/oec-win32
+      run: mkdir -p .release/oec-win32/${{ env.INTEGRATION_FOLDER }}
     - name: Download Asset
       uses: i3h/download-release-asset@v1.2.0
       with:
@@ -329,36 +293,31 @@ jobs:
         tag: ${{ github.event.inputs.oec-version }}
         file: oec-win-386-${{ github.event.inputs.oec-version }}.zip
     - name: Extracting Win32 Package
-      run: unzip -qq oec-win-386-${{ github.event.inputs.oec-version }}.zip -d .release/oec-win32
+      run: unzip -qq oec-win-386-${{ github.event.inputs.oec-version }}.zip -d .release/oec-win32/${{ env.INTEGRATION_FOLDER }}
+    - name: Copy OEC Service Conf
+      run: cp -R release/oec-builder/oec-win32/oecService.json.example .release/oec-win32/${{ env.INTEGRATION_FOLDER }}
     - name: Copy Integration Files
-      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-win32
+      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-win32/${{ env.INTEGRATION_FOLDER }}
     - name: Remove http script (todo remove when http version is released)
-      run: rm -f .release/oec-win32/scripts/http.py
+      run: rm -f .release/oec-win32/${{ env.INTEGRATION_FOLDER }}/scripts/http.py
     - name: Check incomming part exists
       id: check_files
       uses: andstor/file-existence-action@v1
       with:
-        files: ".release/oec-win32/opsgenie-${{ env.INTEGRATION_NAME }}"
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+        files: ".release/oec-win32/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}"
     - name: "Release Incomming Part"
       working-directory: .release
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        INTEGRATION_PATH=oec-win32/opsgenie-${INTEGRATION_NAME}
+        INTEGRATION_PATH=oec-win32/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}
         echo ${INTEGRATION_PATH}
         go get -u github.com/alexcesaro/log && \
         cd ${INTEGRATION_PATH} && \
         GOOS=windows GOARCH=386 go build -o send2opsgenie32.exe send2opsgenie.go
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Compressing Win32 Package
-      run: zip -qq -j -r .release/oec-win32/opsgenie-${INTEGRATION_NAME}-${INTEGRATION_VERSION}-win-386.zip .release/oec-win32/
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      run: |
+          cd .release/oec-win32/
+          zip -r ${{ env.INTEGRATION_FOLDER }}.zip ./${{ env.INTEGRATION_FOLDER }}
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -368,17 +327,19 @@ jobs:
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
-        asset_path: .release/oec-win32/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-win-386.zip
-        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-win-386.zip
+        asset_path: .release/oec-win32/${{ env.INTEGRATION_FOLDER }}.zip
+        asset_name: ${{ env.INTEGRATION_FOLDER }}.zip
         asset_content_type: application/zip
   win64:
     name: Windows 64
     runs-on: ubuntu-latest
     needs: [setup]
+    env:
+      INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
+      INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      INTEGRATION_FOLDER: opsgenie-${{ needs.setup.outputs.integration_name }}-${{ needs.setup.outputs.integration_version }}-win-amd64
     if: github.ref == 'refs/heads/master'    
     steps:
     - name: Set up Go 1.x
@@ -389,7 +350,7 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
     - name: Create Output Directory
-      run: mkdir -p .release/oec-win64
+      run: mkdir -p .release/oec-win64/${{ env.INTEGRATION_FOLDER }}
     - name: Download Asset
       uses: i3h/download-release-asset@v1.2.0
       with:
@@ -398,36 +359,31 @@ jobs:
         tag: ${{ github.event.inputs.oec-version }}
         file: oec-win-amd64-${{ github.event.inputs.oec-version }}.zip
     - name: Extracting Win64 Package
-      run: unzip -qq oec-win-amd64-${{ github.event.inputs.oec-version }}.zip -d .release/oec-win64
+      run: unzip -qq oec-win-amd64-${{ github.event.inputs.oec-version }}.zip -d .release/oec-win64/${{ env.INTEGRATION_FOLDER }}
+    - name: Copy OEC Service Conf
+      run: cp -R release/oec-builder/oec-win64/oecService.json.example .release/oec-win64/${{ env.INTEGRATION_FOLDER }}
     - name: Copy Integration Files
-      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-win64
+      run: cp -R ${{ github.event.inputs.integration }}/. .release/oec-win64/${{ env.INTEGRATION_FOLDER }}
     - name: Remove http script (todo remove when http version is released)
-      run: rm -f .release/oec-win64/scripts/http.py
+      run: rm -f .release/oec-win64/${{ env.INTEGRATION_FOLDER }}/scripts/http.py
     - name: Check incomming part exists
       id: check_files
       uses: andstor/file-existence-action@v1
       with:
-        files: ".release/oec-win64/opsgenie-${{ env.INTEGRATION_NAME }}"
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+        files: ".release/oec-win64/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}"
     - name: "Release Incomming Part"
       working-directory: .release
       if: steps.check_files.outputs.files_exists == 'true'
       run: |
-        INTEGRATION_PATH=oec-win64/opsgenie-${INTEGRATION_NAME}
+        INTEGRATION_PATH=oec-win64/${{ env.INTEGRATION_FOLDER }}/opsgenie-${{ env.INTEGRATION_NAME }}
         echo ${INTEGRATION_PATH}
         go get -u github.com/alexcesaro/log && \
         cd ${INTEGRATION_PATH} && \
         GOOS=windows GOARCH=amd64 go build -o send2opsgenie32.exe send2opsgenie.go
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
     - name: Compressing Win 64 Package
-      run: zip -qq -j -r .release/oec-win64/opsgenie-${INTEGRATION_NAME}-${INTEGRATION_VERSION}-win-amd64.zip .release/oec-win64/
-      env:
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
+      run: |
+          cd .release/oec-win64/
+          zip -r ${{ env.INTEGRATION_FOLDER }}.zip ./${{ env.INTEGRATION_FOLDER }}
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -437,10 +393,8 @@ jobs:
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        INTEGRATION_NAME: ${{ needs.setup.outputs.integration_name }}
-        INTEGRATION_VERSION: ${{ needs.setup.outputs.integration_version }}
       with:
         upload_url: ${{ needs.setup.outputs.upload_url }}
-        asset_path: .release/oec-win64/opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-win-amd64.zip
-        asset_name: opsgenie-${{ env.INTEGRATION_NAME }}-${{ env.INTEGRATION_VERSION }}-win-amd64.zip
+        asset_path: .release/oec-win64/${{ env.INTEGRATION_FOLDER }}.zip
+        asset_name: ${{ env.INTEGRATION_FOLDER }}.zip
         asset_content_type: application/zip
