--- a/.github/workflows/after-release.yml
+++ b/.github/workflows/after-release.yml
@@ -15,18 +15,6 @@ jobs:
           echo ::set-output name=INTEGRATION_VERSION::$version
       - name: Checkout the repository with branch
         uses: actions/checkout@v2
-      - name: Update README.md with latest version of integration
-        env:
-          INTEGRATION_NAME: ${{ steps.setup.outputs.integration_name }}
-          INTEGRATION_VERSION: ${{ steps.setup.outputs.integration_version }}
-        run: |
-          sed  -i 's/\(tag\/${{ env.INTEGRATION_NAME }}-\).*)/\1${{ env.INTEGRATION_VERSION }})/gi' README.md
-          grep --color -ie "${{ env.INTEGRATION_NAME }}" README.md
-      - name: Increase iteration version for branch
-        run: |
-          iterationCount=$(($(cat release/oec-builder/readmeIterationCount) + 1))
-          echo $iterationCount > release/oec-builder/readmeIterationCount
-          echo iteration:$iterationCount
       - name: Set branch name to env
         id: prepare-branch-name
         run: |
@@ -36,15 +24,25 @@ jobs:
       - name: Commit and push changes
         env:
           BRANCH_NAME: ${{ steps.prepare-branch-name.outputs.branch_name }}
+          INTEGRATION_NAME: ${{ steps.setup.outputs.integration_name }}
+          INTEGRATION_VERSION: ${{ steps.setup.outputs.integration_version }}
         run: |
           git config --global user.name 'Github Actions'
           git config --global user.email 'support@atlassian.com'
           git checkout ${{ env.BRANCH_NAME }} 2>/dev/null || git checkout -b ${{ env.BRANCH_NAME }}
-          git commit -am "Update README.md after release(s)"
           if (($(git ls-remote origin ${{ env.BRANCH_NAME }} | wc -l) > 0));
           then
+            echo "Branch already exists will rebase..."
             git pull origin ${{ env.BRANCH_NAME }} --rebase
+          else
+            echo "Increase iteration count...."
+            iterationCount=$(($(cat release/oec-builder/readmeIterationCount) + 1))
+            echo $iterationCount > release/oec-builder/readmeIterationCount
           fi
+          echo "Update readme file..."
+          sed  -i 's/\(tag\/${{ env.INTEGRATION_NAME }}-\).*)/\1${{ env.INTEGRATION_VERSION }})/gi' README.md
+          grep --color -ie "${{ env.INTEGRATION_NAME }}" README.md
+          git commit -am "Update README.md after release(s)"
           git push origin ${{ env.BRANCH_NAME }}
       - name: Create pull request if not exist
         env:
