--- a/release/oec-builder/oec-deb/DEBIAN/control
+++ b/release/oec-builder/oec-deb/DEBIAN/control
@@ -2,7 +2,7 @@ Name: Opsgenie Edge Connector (OEC)
 Description: Integration server for Connecting On-Premise Monitoring and ITSM Tools
 Website: https://www.opsgenie.com
 Maintainer: Opsgenie
-Package: opsgenie-%INTEGRATION%
+Package: %INTEGRATION%
 Section: %INTEGRATION%
 Version: %VERSION%
 Architecture: amd64
